SET(SOURCES screens/ui_Screen1.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    images/ui_img_images_button_checked_png.c
    images/ui_img_images_battery_png.c
    images/ui_img_images_walking_walking_00_png.c
    images/ui_img_images_thumpsup_thumpsup_00_png.c
    images/ui_img_images_thumpsup_thumpsup_01_png.c
    images/ui_img_images_thumpsup_thumpsup_02_png.c
    images/ui_img_images_thumpsup_thumpsup_03_png.c
    images/ui_img_images_thumpsup_thumpsup_04_png.c
    images/ui_img_images_thumpsup_thumpsup_05_png.c
    images/ui_img_images_thumpsup_thumpsup_06_png.c
    images/ui_img_images_thumpsup_thumpsup_07_png.c
    images/ui_img_images_thumpsup_thumpsup_08_png.c
    images/ui_img_images_thumpsup_thumpsup_09_png.c
    images/ui_img_images_thumpsup_thumpsup_10_png.c
    images/ui_img_images_walking_walking_01_png.c
    images/ui_img_images_walking_walking_02_png.c
    images/ui_img_images_walking_walking_03_png.c
    images/ui_img_images_walking_walking_04_png.c
    images/ui_img_images_walking_walking_05_png.c
    images/ui_img_images_walking_walking_06_png.c
    images/ui_img_images_walking_walking_07_png.c
    images/ui_img_images_walking_walking_08_png.c
    images/ui_img_images_walking_walking_09_png.c
    images/ui_img_images_walking_walking_10_png.c
    images/ui_img_images_walking_walking_11_png.c
    images/ui_img_images_walking_walking_12_png.c
    images/ui_img_images_walking_walking_13_png.c
    images/ui_img_images_walking_walking_14_png.c
    images/ui_img_images_walking_walking_15_png.c
    images/ui_img_images_walking_walking_16_png.c
    images/ui_img_images_walking_walking_17_png.c
    images/ui_img_images_walking_walking_18_png.c
    images/ui_img_images_walking_walking_19_png.c
    images/ui_img_images_walking_walking_20_png.c
    fonts/ui_font_J20.c
    fonts/ui_font_J35.c
    fonts/ui_font_J60.c
    fonts/ui_font_J70.c)

add_library(ui ${SOURCES})
